--- a/app/assets/stylesheets/pages/_jobs_show.scss
+++ b/app/assets/stylesheets/pages/_jobs_show.scss
@@ -9,7 +9,7 @@
 }
 
 .comp-logo {
-  max-width: 100%;
+  max-width: 500px;
   height: auto;
   margin: auto;
 }
@@ -29,7 +29,7 @@
   padding: 1rem 2rem;
   background-color: #538BCB;
   color: white;
-  height: 50vh;
+  min-height: 50vh;
   h3{
     padding-bottom: 1.8rem;
   }
